...
    case mindMaps    = 2
    case flashcards  = 3
    case pdfs        = 4

    var title: String {
        switch self {
        case .disciplinas: return "Disciplinas"
        case .notebooks:   return "Notebooks"
        case .mindMaps:    return "Mapas"
        case .flashcards:  return "Flashcards"
        case .pdfs:        return "PDFs"
        }
    }
}

...
